thêm phần lấy danh sách nhạc theo id truyện